# ComfyUI-API-Toolkit

./: README.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
services/: __init__.py
services/elevenlabs/: client.py  nodes.py
services/gemini/: nodes.py
services/kling/: nodes.py
services/utils/: __init__.py  nodes.py
shared/: __init__.py  auth.py
tests/: test_init.py
tests/test_elevenlabs/: test_nodes.py
tests/test_gemini/: test_nodes.py
tests/test_kling/: test_nodes.py
tests/test_shared/: test_conversions.py  test_errors.py  test_retry.py
