[project]
name = "comfyui-api-toolkit"
version = "1.6.0"
description = "Kling AI, ElevenLabs, and Google Gemini nodes for ComfyUI"
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = []

[project.optional-dependencies]
kling = ["requests", "PyJWT"]
elevenlabs = ["requests", "soundfile", "scipy"]
gemini = ["google-genai>=0.8.0"]
all = ["requests", "PyJWT", "soundfile", "scipy", "google-genai>=0.8.0"]

[project.urls]
Repository = "https://github.com/IxMxAMAR/ComfyUI-API-Toolkit"

[tool.comfy]
PublisherId = "ixmxamar"
DisplayName = "ComfyUI API Toolkit"
Icon = ""
